--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-project",
-  "homepage": "https://https://tanvin8.github.io/JavaBunny",
+  "homepage": "https://tanvin8.github.io/JavaBunny",
   "private": true,
   "version": "0.0.0",
   "type": "module",
